syntax = "proto3";

package task;

import "google/protobuf/empty.proto";

message Task {
  string id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
}

message TaskId {
  string id = 1;
}

message TaskList {
  repeated Task tasks = 1;
}

message TaskInput {
  string title = 1;
  string description = 2;
}

message TaskUpdate {
  string id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
}

service TaskService {
  rpc CreateTask(TaskInput) returns (Task);
  rpc GetTask(TaskId) returns (Task);
  rpc ListTasks(google.protobuf.Empty) returns (stream Task);
  rpc UpdateTask(TaskUpdate) returns (Task);
  rpc DeleteTask(TaskId) returns (google.protobuf.Empty);
}